loading-spinner added

--- a/wisdom/wisdom/templates/chat.html
+++ b/wisdom/wisdom/templates/chat.html
@@ -19,6 +19,7 @@
                     <!-- Chat history will be displayed here -->
                 </div>
             </div>
+            <div class="loading-spinner" id="loading-spinner"></div>
             <form id="chat-form">
                 <input type="text" id="user-input" placeholder="Type your message..." required>
                 <button type="button" id="send-button">Send</button>
